Fix picking vs hidden unchanged stretches

--- a/nbdime-web/src/styles/merge.css
+++ b/nbdime-web/src/styles/merge.css
@@ -17,7 +17,7 @@
 
 .jp-Notebook-merge .CodeMirror-merge-pane-local,
 .jp-Notebook-merge .CodeMirror-merge-pane-remote,
-.jp-Notebook-merge .CodeMirror-merge-pane-base {
+.jp-Notebook-merge .CodeMirror-merge-pane-base:not(.CodeMirror-merge-pane-unchanged) {
   width: 33%;
 }
 
